# AgenticQA

./: .5-TOOLS-ADDED.status  .auditrc.json  .env.example  .env.production  .gitignore  .pa11yci.json  .sdet-test-report.json  ABOUT.md  ACCESSIBILITY_FIXES_DETECTED.md  AGENT.md  AGENT_EXPERTISE_KNOWLEDGE.md  AGENT_ORCHESTRATION.md  AGENT_ORCHESTRATION_BEFORE_AFTER.md  AGENT_ORCHESTRATION_COMPLETE.md  AGENT_ORCHESTRATION_DIAGRAMS.md  AGENT_ORCHESTRATION_INDEX.md  AGENT_ORCHESTRATION_QUICK_REF.md  AGENT_REPORT_AWARE_CHECKLIST.md  AGENT_REPORT_AWARE_COMPLETE.md  AGENT_REPORT_AWARE_QUICK_REF.md  AGENT_REPORT_AWARE_SYSTEM.md  AGENT_SKILLS_GITHUB_VALIDATION.md  AGENT_TESTING_DEPLOYMENT.md  AGENT_TESTING_INDEX.md  AGENT_TESTING_INTEGRATION_GUIDE.md  AGENT_TESTING_QUICK_REF.md  AGENT_TESTING_SYSTEM.md  ANALYSIS_COMPLETE.md  ARCHITECTURE_IMPROVEMENTS.md  AUTOMATED_TEST_REPAIR_SYSTEM.md  AUTONOMOUS_TEST_REPAIR_COMPLETE.md  AUTO_FIX_SYSTEM.md  BRANCH_FIELD_COMPLETE.md  BRANCH_FIELD_IMPLEMENTATION.md  BRANCH_FIELD_SUMMARY.md  BRANCH_FIELD_USER_GUIDE.md  BRANCH_FIELD_VERIFICATION.md  BRANCH_FIELD_VISUAL_GUIDE.md  BULLETPROOF_WORKFLOW_FIX.md  CHANGELOG.md  (+266 more)
AgenticQA/: .dockerignore  .env.cloud.example  .githooks-setup  .gitignore  .pa11yci.json  .pre-commit-config.yaml  .puppeteerrc.cjs  ACCESSIBILITY_AUTO_FIX.md  AGENTS_DATA_STORE_INTEGRATION.md  AGENT_LEARNING_SYSTEM.md  ALL_AGENTS_LEARNING_MATRIX.md  ARTIFACT_INGESTION_COMPLETE.md  BACKUP_AND_PROTECTION.md  CHANGELOG.md  CLOUD_DEPLOYMENT.md  CODE_CHANGE_TRACKING.md  DATA_FLOW_DIAGRAMS.md  DATA_QUALITY_TESTING.md  DATA_STORE.md  Dockerfile  EXTENDING_LEARNING_TO_ALL_AGENTS.md  GENERATED_FILES_AUDIT.md  GITHUB_SECRETS_SETUP.md  HYBRID_RAG_ARCHITECTURE.md  HYBRID_RAG_IMPLEMENTATION.md  HYBRID_RAG_QUICKSTART.md  HYBRID_RAG_README.md  IMPLEMENTATION_SUMMARY.md  LEARNING_LOOP.md  PATTERN_LEARNING.md  PIPELINE_ARCHITECTURE.md  PIPELINE_TESTING_FRAMEWORK.md  PIPELINE_VALIDATION_WORKFLOW.md  QUICK_REFERENCE.md  RAG_IMPLEMENTATION.md  README.md  SDK.md  SDK_STRUCTURE.md  SECURITY.md  SNAPSHOT_TESTING.md  (+40 more)
AgenticQA/.agenticqa/: mcp_patterns.json
AgenticQA/.github/: CODEOWNERS  TESTING.md  dependabot.yml
AgenticQA/.test-artifact-store/: index.json
AgenticQA/benchmarks/: BENCHMARK_REPORT.md
AgenticQA/dashboard/: README.md  app.py
AgenticQA/docs/: AGENT_COLLABORATION.md  AGENT_IMPROVEMENT_GUIDE.md  COVER_LETTER_ANTHROPIC_GRC_AUTOMATION_LEAD_NICK_HOMYK.md  COVER_LETTER_CLOUDBEES_DIRECTOR_QUALITY_ENGINEERING_NICK_HOMYK.md  COVER_LETTER_CLOUDBEES_DIRECTOR_QUALITY_ENGINEERING_NICK_HOMYK.txt  COVER_LETTER_NEVADANANO_QA_MANAGER_NICK_HOMYK.txt  COVER_LETTER_TANGO_SR_QA_AUTOMATION_NICK_HOMYK.md  COVER_LETTER_TANGO_SR_QA_AUTOMATION_NICK_HOMYK.txt  COVER_LETTER_YUM_DIRECTOR_QUALITY_ENGINEERING_NICK_HOMYK.md  COVER_LETTER_YUM_DIRECTOR_QUALITY_ENGINEERING_NICK_HOMYK.txt  HANDOFF_2026_02_28.md  HANDOFF_2026_03_01.md  HANDOFF_2026_03_02.md  HANDOFF_2026_03_03.md  HANDOFF_2026_03_12.md  INTEGRATION_MATRIX.md  LINKEDIN_MCP_SECURITY_SCANNER_NICK_HOMYK.md  LINKEDIN_POST_VECTOR_DB_MIGRATION.md  MEDIUM_ADLC_AGENTICQA_NICK_HOMYK.md  MEDIUM_ARTICLE_VECTOR_DB_MIGRATION.md  MEDIUM_MCP_SECURITY_SCANNER_NICK_HOMYK.md  MEDIUM_POST_AGENTICQA.md  NEO4J_QUICKSTART.md  NEO4J_SCHEMA.md  OPEN_SOURCE_VECTOR_DB_MIGRATION_PLAN.md  PIPELINE_PRODUCT_EXPLAINER.md  PLANS_AND_PACKAGING.md  PRICING_PAGE_DRAFT.md  RELEASE_NOTES.md  RESUME_ANTHROPIC_GRC_AUTOMATION_LEAD_NICK_HOMYK.md  RESUME_CLOUDBEES_DIRECTOR_QUALITY_ENGINEERING_NICK_HOMYK.md  RESUME_CLOUDBEES_DIRECTOR_QUALITY_ENGINEERING_NICK_HOMYK.txt  RESUME_MACHINIFY_STAFF_QA_NICK_HOMYK.md  RESUME_MACHINIFY_STAFF_QA_NICK_HOMYK.txt  RESUME_NEVADANANO_QA_MANAGER_NICK_HOMYK.md  RESUME_STAFF_SDET_PLATFORM_NICK_HOMYK.txt  RESUME_STEALTH_AI_INFRA_SDET_NICK_HOMYK.txt  RESUME_YUM_DIRECTOR_QUALITY_ENGINEERING_NICK_HOMYK.md  RESUME_YUM_DIRECTOR_QUALITY_ENGINEERING_NICK_HOMYK.txt  ROI_MEASUREMENT.md  (+6 more)
AgenticQA/examples/: code_change_tracking_example.py  neo4j_analytics.py  python_sdk_basic.py  python_sdk_cicd.py  python_sdk_remote.py  snapshot_testing_example.py  typescript_sdk_basic.ts  typescript_sdk_react.tsx
AgenticQA/public/: dashboard.html  index.html  login.html  settings.html
AgenticQA/scripts/: ci_compliance_drift.py  ci_semantic_diff.py  github_action_entrypoint.py  ingest_scan_results.py  init.py  nightly_self_validation.py  observability_quality_report.py  run_capability_benchmark.py  run_client_scan.py  run_load_test.py  run_sdet_trend_benchmark.py  run_sre_on_repo.py  scan_org.py  seed_weaviate_from_store.py  trigger_pipeline_validation.sh  validate_pipeline.sh  verify_vector_migration.py
AgenticQA/src/: agents.py
AgenticQA/tests/: __init__.py  conftest.py  test_action_improvements.py  test_adaptive_thresholds.py  test_agent_call_signer.py  test_agent_chain.py  test_agent_contracts.py  test_agent_delegation.py  test_agent_error_handling.py  test_agent_factory.py  test_agent_rag_integration.py  test_agent_scopes.py  test_agent_skill_scanner.py  test_agent_trust_graph.py  test_agent_weaviate_integration.py  test_ai_act.py  test_ai_model_sbom.py  test_api_endpoints_coverage.py  test_api_endpoints_coverage2.py  test_api_endpoints_coverage3.py  test_api_middleware.py  test_architecture_scanner.py  test_bias_detector.py  test_blast_radius.py  test_change_executor.py  test_ci_ingestion_fallback.py  test_ci_yaml_scanner.py  test_cli_commands.py  test_client_onboarding_edge_cases.py  (+142 more)
(+474 files in other folders)
