[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticqa"
version = "1.0.0"
description = "Intelligent autonomous QA platform with learning agents, secure data store, and real-time insights"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nicholas Homyk", email = "nicholas@agenticqa.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "great-expectations>=0.14.0",
    "pydantic>=1.8.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "weaviate-client>=3.0.0",
    "pandas>=1.0.0",
    "numpy>=1.0.0",
    "ragas>=0.4.0",
]
rag = [
    "weaviate-client>=3.0.0",
    "sentence-transformers>=2.0.0",
    "ragas>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/nhomyk/AgenticQA"
Repository = "https://github.com/nhomyk/AgenticQA"
Documentation = "https://github.com/nhomyk/AgenticQA#readme"

[project.scripts]
agenticqa = "agenticqa.cli:main"

[tool.setuptools]
packages = ["agenticqa"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "pipeline: pipeline tests",
    "critical: critical path tests",
    "deployment: deployment tests",
    "data_integrity: data integrity tests",
    "data_quality: data quality tests",
    "data_security: data security tests",
    "fast: fast tests",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
